--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     <section class="products" id="products" aria-label="Products">
     <!-- Product 1 -->
     <div class="product" tabindex="0">
-        <img src="https://i.ibb.co/p6KCFY5y/2.png" alt="Custom T-Shirt" loading="lazy" width="250" height="250">
+        <img src="images/TSHIRT.png" alt="Custom T-Shirt" loading="lazy" width="250" height="250">
         <h2>Custom T-Shirt</h2>
         <p>Start From: ₱129.00/pc</p>
         <label for="tshirt-qty">Quantity:</label>
@@ -457,7 +457,7 @@
     </div>
     <!-- Product 2 -->
     <div class="product" tabindex="0">
-        <img src="https://i.ibb.co/TB9Nhr8T/1.png" alt="Custom Mug" loading="lazy" width="250" height="250">
+        <img src="images/MUG.png" alt="Custom Mug" loading="lazy" width="250" height="250">
         <h2>Custom Mug</h2>
         <p>Start From: ₱79.00/pc</p>
         <label for="mug-qty">Quantity:</label>
@@ -467,7 +467,7 @@
     </div>
     <!-- Product 3 -->
     <div class="product" tabindex="0">
-        <img src="https://i.ibb.co/gLvmgNmf/3.png" alt="Custom Hat" loading="lazy" width="250" height="250">
+        <img src="images/HAT.png" alt="Custom Hat" loading="lazy" width="250" height="250">
         <h2>Custom Hat</h2>
         <p>Start From: ₱99.00/pc</p>
         <label for="hat-qty">Quantity:</label>
@@ -477,7 +477,7 @@
     </div>
     <!-- Product 4 -->
     <div class="product" tabindex="0">
-        <img src="https://i.ibb.co/zL0N1v3/5.png" alt="Custom Sling Bag" loading="lazy" width="250" height="250">
+        <img src="images/SLING BAG.png" alt="Custom Sling Bag" loading="lazy" width="250" height="250">
         <h2>Custom Bag</h2>
         <p>Start From: ₱229.00/pc</p>
         <label for="bag-qty">Quantity:</label>
@@ -487,7 +487,7 @@
     </div>
     <!-- Product 5 -->
     <div class="product" tabindex="0">
-        <img src="https://i.ibb.co/QjT7G3NS/6.png" alt="Custom Phone Case" loading="lazy" width="250" height="250">
+        <img src="images/PHONE CASE.png" alt="Custom Phone Case" loading="lazy" width="250" height="250">
         <h2>Custom Phone Case</h2>
         <p>Start From: ₱39.00/pc</p>
         <label for="phone-case-qty">Quantity:</label>
@@ -497,7 +497,7 @@
     </div>
     <!-- Product 6 -->
     <div class="product" tabindex="0">
-        <img src="https://i.ibb.co/sdX5bsDZ/4.png" alt="Custom Jacket" loading="lazy" width="250" height="250">
+        <img src="images/JACKET.png" alt="Custom Jacket" loading="lazy" width="250" height="250">
         <h2>Custom Jacket</h2>
         <p>Start From: ₱309.00/pc</p>
         <label for="jacket-qty">Quantity:</label>
@@ -507,7 +507,7 @@
     </div>
     <!-- Product 7 -->
     <div class="product" tabindex="0">
-        <img src="https://i.ibb.co/nd1jSXJ/7.png" alt="Custom Towel" loading="lazy" width="250" height="250">
+        <img src="images/TOWEL.png" alt="Custom Towel" loading="lazy" width="250" height="250">
         <h2>Custom Towel</h2>
         <p>Start From: ₱139.00/pc</p>
         <label for="towel-qty">Quantity:</label>
@@ -517,7 +517,7 @@
     </div>
     <!-- Product 8 -->
     <div class="product" tabindex="0">
-        <img src="https://i.ibb.co/gMWpVnxH/8.png" alt="Custom Hotel Slipper" loading="lazy" width="250" height="250">
+        <img src="images/SLIPPER.png" alt="Custom Hotel Slipper" loading="lazy" width="250" height="250">
         <h2>Custom Hotel Slipper</h2>
         <p>Start From: ₱150.00/pc</p>
         <label for="slipper-qty">Quantity:</label>
