--- a/index.html
+++ b/index.html
@@ -406,11 +406,11 @@
     <header>
         <nav aria-label="Main Navigation">
             <img 
-                src="https://i.ibb.co/bgbmHg3y/MARIE-CUSTOM-GOODS.png" 
+                src="images/LOGO.png" 
                 alt="Marie Custom Goods Logo"
                 id="main-logo"
-                width="100"
-                height="100"
+                width="150"
+                height="150"
                 loading="lazy"
             />
         </nav>
@@ -427,7 +427,7 @@
         <div class="why-marie-content">
             <div class="why-item" tabindex="0">
                 <h3>WHO WE ARE</h3>
-                <img src="https://i.ibb.co/bgbmHg3y/MARIE-CUSTOM-GOODS.png" alt="MARIE GOODS" class="why-icon" loading="lazy" width="100" height="100">
+                <img src="images/LOGO.png" alt="MARIE GOODS" class="why-icon" loading="lazy" width="100" height="100">
                 <p>Founded by Marie Rodriguez, a design enthusiast, we started as a hobby and quickly grew into a business that’s passionate about helping you express your individuality through one-of-a-kind products.</p>
             </div>
             
@@ -438,7 +438,7 @@
             
             <div class="why-item" tabindex="0">
                 <h3>OUR MISSION</h3>
-                <img src="https://i.ibb.co/bgbmHg3y/MARIE-CUSTOM-GOODS.png" alt="MARIE GOODS" class="why-icon" loading="lazy" width="100" height="100">
+                <img src="images/LOGO.png" alt="MARIE GOODS" class="why-icon" loading="lazy" width="100" height="100">
                 <p>We want to help you express yourself. Whether it's for your business, a special gift, or just something you’ve dreamed up, we're all about bringing your vision to life with quality prints and super fast service.</p>
             </div>
         </div>
@@ -531,17 +531,17 @@
         <h2>Why PRINT with us?</h2>
         <div class="why-marie-content">
             <div class="why-item" tabindex="0">
-                <img src="https://i.ibb.co/vxgKxLhn/2.png" alt="Premium Quality Prints" class="why-icon" loading="lazy" width="50" height="50">
+                <img src="images/QUALITY.png" alt="Premium Quality Prints" class="why-icon" loading="lazy" width="50" height="50">
                 <h3>Premium Quality Prints</h3>
                 <p>Our prints feature high-definition quality with vibrant colors. We use durable materials, ensuring that your custom items not only look fantastic but last long, even with frequent use.</p>
             </div>
             <div class="why-item" tabindex="0">
-                <img src="https://i.ibb.co/0pxHp7H2/1.png" alt="Unlimited Customization" class="why-icon" loading="lazy" width="50" height="50">
+                <img src="images/UNLIMITED.png" alt="Unlimited Customization" class="why-icon" loading="lazy" width="50" height="50">
                 <h3>Unlimited Customization</h3>
                 <p>Choose from a wide range of products and create your unique design with our easy-to-use online tool. Whether it's text, images, logos, or colors, the possibilities are endless.</p>
             </div>
             <div class="why-item" tabindex="0">
-                <img src="https://i.ibb.co/7Jch33KP/3.png" alt="Fast Delivery" class="why-icon" loading="lazy" width="50" height="50">
+                <img src="images/DELIVERY.png" alt="Fast Delivery" class="why-icon" loading="lazy" width="50" height="50">
                 <h3>Fast Delivery</h3>
                 <p>We understand the importance of time. That's why we ensure a quick turnaround for all orders. Expect your custom goods to be ready in as little as 48 hours, or sooner if needed.</p>
             </div>
