--- a/order-summary.html
+++ b/order-summary.html
@@ -5,72 +5,27 @@
     <title>Order Summary - Marie Custom Goods</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        /* ... CSS sama seperti file sebelumnya ... */
         body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f4;}
-        .summary-container {
-            max-width: 520px;
-            margin: 32px auto;
-            background: #fff;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 4px 18px rgba(0,0,0,.12);
-        }
-        .brand-logo {
-            display: block;
-            margin: 0 auto 20px auto;
-            width: 90px;
-            height: 90px;
-            border-radius: 50%;
-            object-fit: contain;
-            background: #fff;
-            box-shadow: 0 2px 8px rgba(21,88,36,0.10);
-        }
+        .summary-container { max-width: 520px; margin: 32px auto; background: #fff; padding: 30px; border-radius: 12px; box-shadow: 0 4px 18px rgba(0,0,0,.12);}
+        .brand-logo { display: block; margin: 0 auto 20px auto; width: 90px; height: 90px; border-radius: 50%; object-fit: contain; background: #fff; box-shadow: 0 2px 8px rgba(21,88,36,0.10);}
         h1 { color: #155824; text-align:center; }
         ul { list-style-type:none; padding:0; }
         li { margin-bottom:12px; font-size:1.1em; }
         .total { font-weight:bold; font-size:1.2em; color:#155824; margin-top:20px;}
-        .back-btn {
-            display: block;
-            margin: 24px auto 0 auto;
-            background: #ddcf0e;
-            color: #000;
-            border: none;
-            border-radius: 6px;
-            padding: 12px 30px;
-            font-size: 1em;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-            transition: background 0.2s;
-        }
+        .back-btn { display: block; margin: 24px auto 0 auto; background: #ddcf0e; color: #000; border: none; border-radius: 6px; padding: 12px 30px; font-size: 1em; cursor: pointer; text-align: center; text-decoration: none; transition: background 0.2s;}
         .back-btn:hover { background: #c7bc10; }
         .empty { color: #888; text-align:center; margin: 30px 0; }
         form.checkout-form { margin-top:32px; }
         .form-group { margin-bottom: 16px; }
         label { font-weight:bold; display:block; margin-bottom:6px; }
-        input, select, textarea {
-            width: 100%;
-            padding: 8px;
-            font-size: 1em;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            box-sizing: border-box;
-        }
+        input, select, textarea { width: 100%; padding: 8px; font-size: 1em; border-radius: 5px; border: 1px solid #ccc; box-sizing: border-box;}
         textarea { resize: vertical; min-height: 48px; }
-        .submit-btn {
-            width:100%;
-            background: #155824;
-            color: #fff;
-            border: none;
-            border-radius: 6px;
-            padding: 12px 0;
-            font-size: 1.1em;
-            cursor: pointer;
-            margin-top: 10px;
-            transition: background 0.2s;
-        }
+        .submit-btn { width:100%; background: #155824; color: #fff; border: none; border-radius: 6px; padding: 12px 0; font-size: 1.1em; cursor: pointer; margin-top: 10px; transition: background 0.2s;}
         .submit-btn:hover { background: #28a745; }
         .required { color: #c02618; }
         .payment-methods { display:flex; flex-direction:column; gap:10px; margin-bottom:10px;}
+        .payment-options-row { display: flex; gap: 10px; margin-bottom:10px; }
         .payment-option {
             display: flex;
             align-items: center;
@@ -80,9 +35,11 @@
             border-radius: 5px;
             cursor: pointer;
             background: #fafafa;
-            transition: border 0.2s;
+            transition: border 0.2s, background 0.2s;
             font-size: 1.1em;
             min-width: 0;
+            flex: 1;
+            user-select: none;
         }
         .payment-option.selected {
             border: 2px solid #155824;
@@ -97,31 +54,10 @@
             box-shadow: 0 1px 4px rgba(0,0,0,0.07);
             margin-right: 6px;
         }
-        .hidden-radio {
-            display: none;
-        }
-        .success-message {
-            color: #155824;
-            background: #e8fbe8;
-            border: 1px solid #b6e4b6;
-            padding: 18px 12px;
-            border-radius: 7px;
-            margin: 22px 0;
-            text-align: center;
-            font-size: 1.08em;
-        }
-        .order-info-box {
-            background: #f6f9ff;
-            border-left: 4px solid #155824;
-            padding: 16px 18px;
-            margin: 30px 0 0 0;
-            border-radius: 7px;
-            color: #233;
-            font-size: 1.05em;
-        }
-        .order-info-box strong {
-            color: #155824;
-        }
+        .hidden-radio { display: none; }
+        .success-message { color: #155824; background: #e8fbe8; border: 1px solid #b6e4b6; padding: 18px 12px; border-radius: 7px; margin: 22px 0; text-align: center; font-size: 1.08em;}
+        .order-info-box { background: #f6f9ff; border-left: 4px solid #155824; padding: 16px 18px; margin: 30px 0 0 0; border-radius: 7px; color: #233; font-size: 1.05em;}
+        .order-info-box strong { color: #155824; }
         @media (max-width: 600px) {
             .brand-logo { width: 60px; height: 60px; }
             .payment-icon { width: 26px; height: 26px; }
@@ -131,7 +67,6 @@
 </head>
 <body>
     <div class="summary-container">
-        <!-- LOGO ADDED -->
         <img src="images/LOGO.png" alt="Marie Custom Goods Logo" class="brand-logo" loading="lazy" width="90" height="90">
         <h1>Your Order Summary</h1>
         <ul id="order-list"></ul>
@@ -193,8 +128,6 @@
             We’ll contact you via SMS or email shortly and send you a payment link or QR code for your chosen payment platform.<br><br>
             <b>Please keep your phone open for a confirmation text!</b>
         </div>
-
-        <!-- INFO BOX: ORDER PROCESSING & CUSTOMER NOTICE -->
         <div class="order-info-box">
             <strong>Order Processing & Confirmation</strong><br><br>
             We will process your order within our business hours:<br>
@@ -206,7 +139,6 @@
             If you have any questions or need assistance, please contact us at <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>.<br><br>
             <strong>Thank you for your order with MARIE CUSTOM GOODS. We look forward to your next purchase!</strong>
         </div>
-
         <a href="index.html" class="back-btn">Back to Shop</a>
     </div>
     <script>
@@ -234,26 +166,36 @@
         // Render payment options by group
         paymentGroups.forEach((group) => {
             let groupDiv = document.createElement('div');
-            groupDiv.style.display = "flex";
-            groupDiv.style.gap = "10px";
-            groupDiv.style.marginBottom = "10px";
+            groupDiv.className = 'payment-options-row';
             group.forEach(platform => {
                 let container = document.createElement('div');
                 container.className = 'payment-option';
                 container.tabIndex = 0;
                 container.setAttribute('role', 'radio');
                 container.setAttribute('aria-checked', 'false');
-                container.style.flex = "1";
                 container.dataset.idx = paymentIdx;
+                // Radio button hidden, not in label
+                let radio = document.createElement('input');
+                radio.type = 'radio';
+                radio.className = 'hidden-radio';
+                radio.name = 'pmethod';
+                radio.value = platform.name;
+                radio.id = `pmethod${paymentIdx}`;
+                radio.tabIndex = -1;
+                container.appendChild(radio);
 
-                let iconHtml = platform.icon
-                    ? `<img src="${platform.icon}" class="payment-icon" alt="${platform.name} logo" loading="lazy">`
-                    : '';
-                // Radio button bukan child label, dan tidak diklik langsung
-                container.innerHTML = `
-                    <input type="radio" class="hidden-radio" name="pmethod" id="pmethod${paymentIdx}" value="${platform.name}" tabindex="-1">
-                    ${iconHtml}<span>${platform.name}</span>
-                `;
+                if (platform.icon) {
+                    let icon = document.createElement('img');
+                    icon.src = platform.icon;
+                    icon.className = 'payment-icon';
+                    icon.alt = platform.name + " logo";
+                    icon.loading = 'lazy';
+                    container.appendChild(icon);
+                }
+                let span = document.createElement('span');
+                span.textContent = platform.name;
+                container.appendChild(span);
+
                 container.addEventListener('click', function() { selectPayment(paymentIdx); });
                 container.addEventListener('keydown', function(e) {
                     if (e.key === "Enter" || e.key === " ") selectPayment(paymentIdx);
