--- a/order-summary.html
+++ b/order-summary.html
@@ -6,21 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f4;}
-        .summary-container { max-width: 520px; margin: 32px auto; background: #fff; padding: 30px; border-radius: 12px; box-shadow: 0 4px 18px rgba(0,0,0,.12);}
-        .brand-logo { display: block; margin: 0 auto 20px auto; width: 90px; height: 90px; border-radius: 50%; object-fit: contain; background: #fff; box-shadow: 0 2px 8px rgba(21,88,36,0.10);}
-        h1 { color: #155824; text-align:center; }
+        .summary-container {
+            max-width: 520px;
+            margin: 32px auto;
+            background: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 18px rgba(0,0,0,.12);
+        }
+        .brand-logo {
+            display: block;
+            margin: 0 auto 20px auto;
+            width: 90px;
+            height: 90px;
+            border-radius: 50%;
+            object-fit: contain;
+            background: #fff;
+            box-shadow: 0 2px 8px rgba(21,88,36,0.10);
+        }
+        h1 { color: #155824; text-align:center;}
         ul { list-style-type:none; padding:0; }
         li { margin-bottom:12px; font-size:1.1em; }
         .total { font-weight:bold; font-size:1.2em; color:#155824; margin-top:20px;}
-        .back-btn { display: block; margin: 24px auto 0 auto; background: #ddcf0e; color: #000; border: none; border-radius: 6px; padding: 12px 30px; font-size: 1em; cursor: pointer; text-align: center; text-decoration: none; transition: background 0.2s;}
+        .back-btn {
+            display: block;
+            margin: 24px auto 0 auto;
+            background: #ddcf0e;
+            color: #000;
+            border: none;
+            border-radius: 6px;
+            padding: 12px 30px;
+            font-size: 1em;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+            transition: background 0.2s;
+        }
         .back-btn:hover { background: #c7bc10; }
         .empty { color: #888; text-align:center; margin: 30px 0; }
         form.checkout-form { margin-top:32px; }
         .form-group { margin-bottom: 16px; }
         label { font-weight:bold; display:block; margin-bottom:6px; }
-        input, select, textarea { width: 100%; padding: 8px; font-size: 1em; border-radius: 5px; border: 1px solid #ccc; box-sizing: border-box;}
+        input, select, textarea {
+            width: 100%;
+            padding: 8px;
+            font-size: 1em;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
         textarea { resize: vertical; min-height: 48px; }
-        .submit-btn { width:100%; background: #155824; color: #fff; border: none; border-radius: 6px; padding: 12px 0; font-size: 1.1em; cursor: pointer; margin-top: 10px; transition: background 0.2s;}
+        .submit-btn {
+            width:100%;
+            background: #155824;
+            color: #fff;
+            border: none;
+            border-radius: 6px;
+            padding: 12px 0;
+            font-size: 1.1em;
+            cursor: pointer;
+            margin-top: 10px;
+            transition: background 0.2s;
+        }
         .submit-btn:hover { background: #28a745; }
         .required { color: #c02618; }
         .payment-methods { display:flex; flex-direction:column; gap:10px; margin-bottom:10px;}
@@ -34,11 +81,11 @@
             border-radius: 5px;
             cursor: pointer;
             background: #fafafa;
-            transition: border 0.2s, background 0.2s;
+            transition: border 0.2s;
             font-size: 1.1em;
             min-width: 0;
-            flex: 1;
             user-select: none;
+            flex: 1;
         }
         .payment-option.selected {
             border: 2px solid #155824;
@@ -54,9 +101,28 @@
             margin-right: 6px;
         }
         .hidden-radio { display: none; }
-        .success-message { color: #155824; background: #e8fbe8; border: 1px solid #b6e4b6; padding: 18px 12px; border-radius: 7px; margin: 22px 0; text-align: center; font-size: 1.08em;}
-        .order-info-box { background: #f6f9ff; border-left: 4px solid #155824; padding: 16px 18px; margin: 30px 0 0 0; border-radius: 7px; color: #233; font-size: 1.05em;}
-        .order-info-box strong { color: #155824; }
+        .success-message {
+            color: #155824;
+            background: #e8fbe8;
+            border: 1px solid #b6e4b6;
+            padding: 18px 12px;
+            border-radius: 7px;
+            margin: 22px 0;
+            text-align: center;
+            font-size: 1.08em;
+        }
+        .order-info-box {
+            background: #f6f9ff;
+            border-left: 4px solid #155824;
+            padding: 16px 18px;
+            margin: 30px 0 0 0;
+            border-radius: 7px;
+            color: #233;
+            font-size: 1.05em;
+        }
+        .order-info-box strong {
+            color: #155824;
+        }
         @media (max-width: 600px) {
             .brand-logo { width: 60px; height: 60px; }
             .payment-icon { width: 26px; height: 26px; }
@@ -70,7 +136,6 @@
         <h1>Your Order Summary</h1>
         <ul id="order-list"></ul>
         <div class="total" id="order-total"></div>
-
         <form class="checkout-form" id="checkout-form" autocomplete="off" method="POST" action="https://formspree.io/f/xgvzwjlg">
             <div class="form-group">
                 <label for="email">Your Email <span class="required">*</span></label>
@@ -141,28 +206,16 @@
         <a href="index.html" class="back-btn">Back to Shop</a>
     </div>
     <script>
-        // Payment platform list with icons
+        // Payment platforms (add icon file if you want to show icons)
         const paymentGroups = [
-            [
-                { name: "GCASH", icon: "images/GCASH.png" }
-            ],
-            [
-                { name: "PAYPAL", icon: "images/PAYPAL.png" },
-                { name: "PAYMAYA", icon: "images/PAYMAYA.png" }
-            ],
-            [
-                { name: "BDO", icon: "images/BDO.png" },
-                { name: "BPI", icon: "images/BPI.png" }
-            ],
-            [
-                { name: "CASH ON DELIVERY", icon: "" }
-            ]
+            [{ name: "GCASH", icon: "images/GCASH.png" }],
+            [{ name: "PAYPAL", icon: "images/PAYPAL.png" }, { name: "PAYMAYA", icon: "images/PAYMAYA.png" }],
+            [{ name: "BDO", icon: "images/BDO.png" }, { name: "BPI", icon: "images/BPI.png" }],
+            [{ name: "CASH ON DELIVERY", icon: "" }]
         ];
-
         const paymentMethodsDiv = document.getElementById('payment-methods');
         let paymentIdx = 0;
-
-        paymentGroups.forEach(group => {
+        paymentGroups.forEach((group, groupIdx) => {
             let groupDiv = document.createElement('div');
             groupDiv.className = 'payment-options-row';
             group.forEach(platform => {
@@ -171,42 +224,20 @@
                 container.tabIndex = 0;
                 container.setAttribute('role', 'radio');
                 container.setAttribute('aria-checked', 'false');
-                container.dataset.idx = paymentIdx;
-
-                // Hidden radio for accessibility/data only
-                let radio = document.createElement('input');
-                radio.type = 'radio';
-                radio.className = 'hidden-radio';
-                radio.name = 'pmethod';
-                radio.value = platform.name;
-                radio.id = `pmethod${paymentIdx}`;
-                radio.tabIndex = -1;
-                container.appendChild(radio);
-
-                if (platform.icon) {
-                    let icon = document.createElement('img');
-                    icon.src = platform.icon;
-                    icon.className = 'payment-icon';
-                    icon.alt = platform.name + " logo";
-                    icon.loading = 'lazy';
-                    container.appendChild(icon);
-                }
-                let span = document.createElement('span');
-                span.textContent = platform.name;
-                container.appendChild(span);
-
-                container.addEventListener('click', function(e) {
-                    selectPayment(paymentIdx);
-                });
-                container.addEventListener('keydown', function(e) {
+                container.style.flex = "1";
+                let html = `<input type="radio" class="hidden-radio" name="pmethod" id="pmethod${paymentIdx}" value="${platform.name}">`;
+                if (platform.icon) html += `<img src="${platform.icon}" class="payment-icon" alt="${platform.name}">`;
+                html += `<span>${platform.name}</span>`;
+                container.innerHTML = html;
+                container.onclick = () => selectPayment(paymentIdx);
+                container.onkeydown = (e) => {
                     if (e.key === "Enter" || e.key === " ") selectPayment(paymentIdx);
-                });
+                };
                 groupDiv.appendChild(container);
                 paymentIdx++;
             });
             paymentMethodsDiv.appendChild(groupDiv);
         });
-
         function selectPayment(idx) {
             document.querySelectorAll('.payment-option').forEach((el, i) => {
                 el.classList.toggle('selected', i === idx);
@@ -221,8 +252,7 @@
                 }
             }
         }
-
-        // Get cart from localStorage
+        // Cart loading from localStorage
         const cart = JSON.parse(localStorage.getItem('cart') || "[]");
         const orderList = document.getElementById('order-list');
         const orderTotal = document.getElementById('order-total');
@@ -243,7 +273,7 @@
             orderTotal.textContent = `Total: ₱${total.toFixed(2)}`;
             document.getElementById('order-details-hidden').value = detailsText + `Total: ₱${total.toFixed(2)}`;
         }
-
+        // Form validation and submit
         document.getElementById('checkout-form').onsubmit = function(e){
             if (!document.getElementById('payment-hidden').value) {
                 alert("Please select your payment platform.");
