--- a/order-summary.html
+++ b/order-summary.html
@@ -48,7 +48,7 @@
     <img src="images/LOGO.png" alt="Marie Custom Goods Logo" class="brand-logo" loading="lazy" width="90" height="90">
     <h1>Your Order Summary</h1>
     <ul id="order-list"></ul>
-    <div class="total" id="order-total"></div>
+    <div class="total" id="order-total"></div><br>
     <form class="checkout-form" id="checkout-form" autocomplete="off" method="POST" action="https://formspree.io/f/xgvzwjlg">
         <div class="form-group">
             <label for="email">Your Email <span class="required">*</span></label>
