--- a/order-summary.html
+++ b/order-summary.html
@@ -9,49 +9,60 @@
         body {
             font-family: 'Inter', Arial, sans-serif;
             margin: 0; padding: 0;
-            background: linear-gradient(120deg, #aef9f5 0%, #f9e5ae 100%);
+            background: #ffffff;
         }
         .checkout-wrapper {
             max-width: 660px;
             margin: 40px auto;
-            background: #fff;
+            background: #10150d;
             border-radius: 18px;
-            box-shadow: 0 8px 32px rgba(66,196,182,0.11), 0 1.5px 10px rgba(255,161,161,0.09);
+            box-shadow: 0 8px 32px rgba(23, 39, 17, 0.22), 0 1.5px 10px rgba(255,215,32,0.07);
             padding: 0 0 30px 0;
             overflow: hidden;
+            border: 2.5px solid #e4c900;
         }
         .header-bar {
-            background: #42c4b6;
-            color: #fff;
+            background: #0d1a11;
+            color: #e4c900;
             text-align: center;
             padding: 26px 0 14px 0;
             border-bottom-left-radius: 18px;
             border-bottom-right-radius: 18px;
+            box-shadow: 0 4px 22px #0008;
         }
         .brand-logo {
-            width: 64px; height: 64px; border-radius: 12px; object-fit: cover;
-            background: #fff; box-shadow: 0 2px 8px rgba(66,196,182,0.08);
-            margin-bottom: 12px;
+            width: 74px; height: 74px; border-radius: 16px; object-fit: cover;
+            background: #000; box-shadow: 0 2px 14px #000a;
+            margin-bottom: 12px; border: 3px solid #e4c900;
         }
         .header-bar h1 {
-            margin: 0; font-size: 2.1em; font-weight: 700;
+            margin: 0; font-size: 2.1em; font-weight: 800; letter-spacing: 0.04em;
+            color: #e4c900;
+            text-shadow: 2px 2px 0 #000, 0 2px 16px #0d1a11c0;
+        }
+        .header-bar .subtitle {
+            color: #fff; font-size:1.09em; font-weight:400; margin-top:4px; letter-spacing:0.02em;
+            text-shadow: 0 2px 12px #000a;
         }
         .stepper {
             display: flex; justify-content: space-around; align-items: center;
             margin: 30px 0 36px 0;
         }
         .step {
-            background: #eafaf7;
-            color: #42c4b6;
+            background: #132818;
+            color: #e4c900;
             border-radius: 50px;
-            font-weight: 600;
+            font-weight: 700;
             padding: 8px 24px;
             font-size: 1.08em;
-            border: 2px solid #42c4b6;
+            border: 2px solid #e4c900;
             margin: 0 8px;
+            letter-spacing: 0.02em;
+            box-shadow: 0 2px 10px #121c10b0;
         }
         .step.active {
-            background: #42c4b6; color: #fff;
+            background: #e4c900; color: #111; border-color: #e4c900;
+            text-shadow: none;
         }
         .order-section {
             padding: 18px 34px 12px 34px;
@@ -62,34 +73,35 @@
             margin-bottom: 15px;
         }
         .order-card {
-            background: #f6faff;
-            border: 1.5px solid #b9eaf4;
-            border-radius: 12px;
+            background: #1e2e20;
+            border: 2px solid #e4c900;
+            border-radius: 14px;
             padding: 16px;
             display: flex; justify-content: space-between; align-items: center;
-            box-shadow: 0 2px 10px rgba(66,196,182,0.04);
+            box-shadow: 0 2px 16px #0006;
         }
         .order-card .item-title {
-            font-weight: 600; color: #2c4e4e; font-size: 1.06em;
+            font-weight: 700; color: #e4c900; font-size: 1.09em; text-shadow: 1px 1px 7px #000a;
         }
         .order-card .item-qty {
-            color: #f66e6e; font-weight: 500; font-size: 1em;
+            color: #fff; font-weight: 600; font-size: 1em;
         }
         .order-card .item-price {
-            color: #428bd4; font-weight: 700; font-size: 1.1em;
-            margin-left: 18px;
+            color: #e4c900; font-weight: 800; font-size: 1.1em;
+            margin-left: 18px; text-shadow: 1px 1px 7px #000c;
         }
         .order-total {
-            font-size: 1.16em;
-            color: #f66e6e;
-            background: #fff4f4;
-            font-weight: 700;
+            font-size: 1.21em;
+            color: #fff;
+            background: #2e5832;
+            font-weight: 800;
             border-radius: 8px;
             text-align: right;
             padding: 11px 22px;
             margin-bottom: 4px;
-            border: 1px solid #fadada;
+            border: 2px solid #e4c900;
             letter-spacing: 0.01em;
+            text-shadow: 1px 1px 10px #000d;
         }
         form.checkout-form {
             margin: 22px 0 0 0;
@@ -100,92 +112,102 @@
         }
         .input-group input,
         .input-group textarea {
-            width: 100%; border: none; border-bottom: 2px solid #c1e1e1;
+            width: 100%; border: none; border-bottom: 2px solid #6a7a4a;
             background: transparent; padding: 10px 8px 7px 8px;
             font-size: 1.09em; font-family: inherit;
-            transition: border 0.2s;
+            color: #e4c900;
+            transition: border 0.2s, color 0.2s;
         }
         .input-group input:focus,
         .input-group textarea:focus {
-            outline: none; border-bottom: 2.5px solid #42c4b6;
+            outline: none; border-bottom: 2.5px solid #e4c900; color: #fff;
         }
         .input-group label {
             position: absolute; left: 10px; top: 10px;
-            font-size: 0.98em; color: #42c4b6;
-            background: #fff; padding: 0 3px;
+            font-size: 0.98em; color: #6a7a4a;
+            background: #10150d; padding: 0 3px;
             pointer-events: none; transition: 0.18s;
         }
         .input-group input:focus + label,
         .input-group input:not(:placeholder-shown) + label,
         .input-group textarea:focus + label,
         .input-group textarea:not(:placeholder-shown) + label {
-            top: -18px; font-size: 0.88em; color: #f66e6e;
+            top: -18px; font-size: 0.88em; color: #e4c900;
+            background: #10150d;
         }
         .payment-methods-block {
             margin: 22px 0 0 0; display: flex; flex-direction: column; gap: 11px;
         }
         .pay-radio-group {
-            display: flex; gap: 16px;
+            display: flex; gap: 16px; flex-wrap: wrap;
         }
         .pay-radio-label {
-            background: #eafaf7;
-            border: 2px solid #b9eaf4;
-            border-radius: 10px; padding: 9px 20px;
+            background: #1e2e20;
+            border: 2px solid #6a7a4a;
+            border-radius: 10px; padding: 9px 18px;
             display: flex; align-items: center; gap: 9px;
-            cursor: pointer; font-size: 1.07em; font-weight: 600;
-            transition: border 0.21s, background 0.21s;
+            cursor: pointer; font-size: 1.07em; font-weight: 700;
+            color: #e4c900;
+            transition: border 0.21s, background 0.21s, color 0.2s;
+            box-shadow: 0 2px 8px #0006;
         }
         .pay-radio-label.selected {
-            background: #42c4b6; color: #fff; border: 2px solid #42c4b6;
+            background: #e4c900; color: #10150d; border: 2px solid #e4c900;
         }
         .pay-radio-label img {
-            width: 26px; height: 26px; object-fit: contain; border-radius: 6px;
-            background: #fff;
+            width: 28px; height: 28px; object-fit: contain; border-radius: 7px;
+            background: #fff; border: 1px solid #e4c900;
         }
         .pay-radio-label input[type="radio"] { display: none; }
         .submit-btn {
-            margin-top: 25px; font-size: 1.16em; font-weight: 700;
-            background: linear-gradient(90deg, #42c4b6 60%, #f66e6e 100%);
-            color: #fff; border: none; border-radius: 8px;
-            padding: 15px 0; cursor: pointer; box-shadow: 0 2px 12px rgba(66,196,182,0.13);
-            transition: background 0.18s;
+            margin-top: 25px; font-size: 1.19em; font-weight: 800;
+            background: linear-gradient(90deg, #e4c900 60%, #183414 100%);
+            color: #10150d; border: none; border-radius: 8px;
+            padding: 15px 0; cursor: pointer; box-shadow: 0 2px 14px #000b;
+            letter-spacing: 0.02em;
+            transition: background 0.18s, color 0.18s;
         }
-        .submit-btn:hover { background: linear-gradient(90deg, #f66e6e 50%, #42c4b6 100%);}
-        .required { color: #f66e6e; }
+        .submit-btn:hover { background: linear-gradient(90deg, #183414 60%, #e4c900 100%); color: #fff;}
+        .required { color: #e4c900; }
         .chat-success {
             margin: 36px auto 0 auto;
             max-width: 420px;
-            background: #eafaf7;
+            background: #182312;
             border-radius: 18px 18px 18px 6px;
-            border: 2px solid #42c4b6;
-            color: #42c4b6;
-            box-shadow: 0 2px 10px rgba(66,196,182,0.09);
-            font-size: 1.12em;
-            padding: 24px 22px;
+            border: 2.5px solid #e4c900;
+            color: #e4c900;
+            box-shadow: 0 2px 18px #000c;
+            font-size: 1.16em;
+            padding: 26px 22px;
             text-align: left;
             position: relative;
+            font-weight: 700;
         }
         .chat-success:before {
             content: ""; display: block;
             position: absolute; left: -16px; bottom: 18px;
-            width: 24px; height: 24px; background: #eafaf7;
+            width: 24px; height: 24px; background: #182312;
             border-bottom-right-radius: 18px;
         }
         .info-box {
             padding: 22px 32px;
-            background: linear-gradient(120deg, #f9e5ae 0%, #eafaf7 100%);
+            background: linear-gradient(120deg, #10150d 0%, #2e5832 100%);
             border-radius: 14px; margin-top: 40px;
-            color: #264f4e; font-size: 1.08em;
+            color: #e4c900; font-size: 1.07em; font-weight: 600;
+            border: 2px solid #e4c900;
+            box-shadow: 0 4px 18px #0004;
         }
-        .info-box h2 { color: #f66e6e; font-size: 1.13em; margin-bottom: 8px;}
+        .info-box h2 { color: #e4c900; font-size: 1.13em; margin-bottom: 8px;}
         .info-box ul { margin: 10px 0 0 1.3em; padding:0;}
         .info-box li { margin-bottom: 8px; }
         .back-link {
-            display: inline-block; margin: 24px 0 0 32px; color: #42c4b6; font-weight: 700;
+            display: inline-block; margin: 24px 0 0 32px; color: #e4c900; font-weight: 700;
             text-decoration: none; padding: 12px 24px; border-radius: 8px;
-            background: #eafaf7; border: 2px solid #42c4b6; transition: background 0.17s;
+            background: #10150d; border: 2px solid #e4c900; transition: background 0.17s, color 0.18s;
+            box-shadow: 0 2px 10px #0006;
         }
-        .back-link:hover { background: #42c4b6; color:#fff; }
+        .back-link:hover { background: #e4c900; color:#10150d; }
+        .empty { color: #e4c900; text-align:center; margin: 32px 0; font-style:italic;}
         @media (max-width:700px) {
             .checkout-wrapper { max-width:98vw; }
             .order-section, .info-box { padding: 11px 7vw; }
@@ -203,13 +225,11 @@
         <div class="header-bar">
             <img src="images/LOGO.png" alt="Marie Custom Goods Logo" class="brand-logo" loading="lazy">
             <h1>Marie Custom Goods</h1>
-            <div style="font-size:1.09em; font-weight:400; margin-top:4px; letter-spacing:0.01em;">
-                Secure Checkout
-            </div>
+            <div class="subtitle">Secure Checkout</div>
         </div>
         <div class="stepper">
-            <div class="step active">Review Order</div>
-            <div class="step">Your Details</div>
+            <div class="step active">Review</div>
+            <div class="step">Details</div>
             <div class="step">Payment</div>
             <div class="step">Confirmation</div>
         </div>
@@ -258,7 +278,7 @@
                     <label for="phoneField">Mobile Number <span class="required">*</span></label>
                 </div>
                 <div class="payment-methods-block">
-                    <div style="font-weight:600; margin-bottom:6px; color:#428bd4;">Choose Payment Method <span class="required">*</span></div>
+                    <div style="font-weight:700; margin-bottom:6px; color:#e4c900;">Choose Payment Method <span class="required">*</span></div>
                     <div class="pay-radio-group" id="paymentRadios"></div>
                     <input type="hidden" name="payment" id="paymentHidden" required>
                 </div>
@@ -267,24 +287,25 @@
             </form>
             <div class="chat-success" id="successChat" style="display:none;">
                 <span style="font-size:1.22em; font-weight:700;">🎉 Thank you!</span><br><br>
-                Your order is confirmed. <br>
+                Your order is confirmed.<br>
                 You'll get a payment link and all next steps via SMS and email very soon.<br>
-                <span style="color:#f66e6e; font-weight:600;">Stay tuned for our message!</span>
+                <span style="color:#e4c900; font-weight:700;">Stay tuned for our message!</span>
             </div>
         </section>
         <aside class="info-box">
             <h2>How Checkout Works</h2>
             <ul>
-                <li><b>Business Hours:</b> Mon–Fri, 9:00 AM–6:00 PM.</li>
-                <li><b>Order Confirmation:</b> We verify your order and confirm your chosen options.</li>
-                <li><b>Payment:</b> We'll send a QR or payment link for your selected method. <b>Pay within 24 hours</b> to secure your order.</li>
-                <li><b>Processing:</b> Most orders ship out in <b>1–3 working days</b> after payment.</li>
-                <li><b>Help:</b> Need assistance? Email <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>.</li>
+                <li><b>Business Hours:</b> Orders are processed Monday to Friday, 9:00 AM – 6:00 PM (PH time). Orders placed outside business hours will be handled on the next working day.</li>
+                <li><b>Order Verification:</b> Our team will reach out to confirm your selected product, size, color, customization preferences, and shipping details to ensure accuracy before payment.</li>
+                <li><b>Secure Payment:</b> A QR code or payment link will be sent based on your chosen method. <b>Please complete payment within 24 hours</b> to confirm your order and avoid automatic cancellation.</li>
+                <li><b>Processing Time:</b> Orders are typically fulfilled within <b>1–3 business days</b> after payment confirmation. Delivery times may vary depending on your location and the selected courier.</li>
+                <li><b>Customer Support:</b> Need help or have questions? Reach out via email at <a style="color:#e4c900;text-decoration:underline;" href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>.</li>
             </ul>
             <div style="margin-top:12px;">
-                <b>Marie Custom Goods: Custom creations, delivered with care.</b>
+                <b>Marie Custom Goods – Custom creations, delivered with care and precision.</b>
             </div>
         </aside>
+
         <a href="index.html" class="back-link">← Back to Shop</a>
     </div>
     <script>
