--- a/index.html
+++ b/index.html
@@ -663,9 +663,9 @@
     <footer>
       <p>
         &copy; DTI Permit # 7654321 | 2023 MARIE CUSTOM GOODS - NCR. All rights reserved.<br>
-        <a href="privacy-policy.html">Privacy Policy</a> |
-        <a href="terms.html">Terms & Conditions</a> |
-        <a href="refund-policy.html">Refund & Return Policy</a><br>
+        <a href="privacy-policy_Version2.html">Privacy Policy</a> |
+        <a href="terms_Version2.html">Terms & Conditions</a> |
+        <a href="refund-policy_Version2.html">Refund & Return Policy</a><br>
         For inquiries, contact us at <a href="mailto:contact@mariecustomgoods.com">contact@mariecustomgoods.com</a>
       </p>
     </footer>
